# District

./: .env.sample  .gitignore  Dockerfile  README.md  classDiagram.dot  docker-compose.yml  pyproject.toml  requirements.txt  some_instructions.txt
base/: models.py  views.py
base/api/: serializers.py  urls.py  views.py
base/templates/base/: feed_component.html  login_register.html  profile.html  room.html  room_form.html  update-user.html
base/tests/: test_models.py  test_views.py
district/: asgi.py  settings.py  urls.py  wsgi.py
static/styles/: style.css
templates/: main.html  navbar.html
theme/: activity.html  create-room.html  delete.html  edit-user.html  index.html  login.html  profile.html  room.html  settings.html  signup.html  topics.html
